[BACKLOG-32447] - Fix an issue on IE and Edge where the transparency wasn't being applied correctly on login control container.

--- a/widgets/src/main/resources/org/pentaho/gwt/widgets/themes/public/themes/ruby/globalRuby.css
+++ b/widgets/src/main/resources/org/pentaho/gwt/widgets/themes/public/themes/ruby/globalRuby.css
@@ -5038,7 +5038,7 @@ span.gwt-RadioButton label {
 }
 
 #login-background-opacity {
-  background-color: rgba(249, 249, 249);
+  background-color: rgba(249, 249, 249, 1);
   height: calc(100% - 90px);
   min-width: 500px;
   float: right;
